syntax = "proto3";

option csharp_namespace = "TranslationConsoleApp";

package translate;

service Translation {
  rpc Translate (TranslateRequest) returns (TranslateReply);
  rpc GetServiceInfo (ServiceInfoRequest) returns (ServiceInfoReply);
}


message TranslateRequest {
  string sourceLang = 1;
  string targetLang = 2;
  repeated string texts = 3;
}

message TranslateReply {
  repeated string translated_texts = 1;
}

message ServiceInfoRequest {
	string foreign_service_info = 1;
}

message ServiceInfoReply {
	string service_info = 1;
}
